# WSLterminal

./: .gitattributes  .gitignore  CREDITS.md  README.md  TODO.md  build.ps1  openinwsl.reg
.github/workflows/: ci.yml
WslTerminal-win-x64/WslTerminal/artifacts/: wslpty  wslptyd
assets/: shell-integration.sh
native/: README.md  build.sh  wslpty.c  wslptyd.c
rust/: Cargo.toml  README.md
rust/wslterm/: Cargo.toml  build.rs
rust/wslterm-core/: Cargo.toml
rust/wslterm-core/examples/: bench.rs
rust/wslterm-core/src/: cell.rs  charwidth.rs  color.rs  flags.rs  input.rs  lib.rs  parser.rs  screen.rs  terminal.rs
rust/wslterm-pty/: Cargo.toml
rust/wslterm-pty/src/: bootstrap.rs  lib.rs  mux.rs  process.rs  protocol.rs  vsock.rs
rust/wslterm/src/: background.rs  gpu.rs  layered.rs  main.rs  settings.rs  wslfiles.rs
src/WslTerminal/: ConsoleHelper.cs  ConsoleModes.cs  Dbg.cs  Native.cs  Program.cs  RenderProbe.cs  Schemes.cs  Settings.cs  SingleInstance.cs  VtSelfTest.cs  WslBootstrap.cs  WslMux.cs  WslProcess.cs  WslSession.cs  WslTerminal.csproj
src/WslTerminal/Highlighting/: Dockerfile.xshd  Go.xshd  Ini.xshd  Lua.xshd  Ruby.xshd  Rust.xshd  Shell.xshd  Toml.xshd  TypeScript.xshd  Yaml.xshd
src/WslTerminal/Ui/: EmojiRenderer.cs  FileDocument.cs  FilePreview.cs  FileSidebar.cs  InputEncoder.cs  MainWindow.cs  Pane.cs  SettingsWindow.cs  TerminalTab.cs  TerminalView.cs  WslFiles.cs
src/WslTerminal/Vt/: Cell.cs  Screen.cs  Terminal.cs  Theme.cs  VtParser.cs
systemd/: README.md  wslptyd.service
