[package]
name = "wslterm-pty"
description = "Windows-side WSL launch (wslg.exe) + wslptyd multiplex client for WSL Terminal."
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]

[target.'cfg(windows)'.dependencies]
# vsock transport: AF_HYPERV winsock client + WSL VMID lookup via the registry.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
] }

[lib]
