[package]
name = "wslterm"
description = "WSL Terminal GUI (Rust rewrite) — milestone 1: render grid + type into a live WSL session."
edition.workspace = true
version.workspace = true
license.workspace = true
default-run = "wslterm"

[dependencies]
wslterm-core = { path = "../wslterm-core" }
wslterm-pty = { path = "../wslterm-pty" }

# CPU-rendered window: keeps RAM low and avoids the wgpu/D3D managed stack.
# Presentation is via UpdateLayeredWindow (see layered.rs) for per-pixel alpha.
winit = "0.30"
ab_glyph = "0.2"
# Lightweight, Windows-only clipboard access for copy/paste.
clipboard-win = "5"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ico = "0.3"
# Background image decoding. Keep this on 0.24 so the workspace still builds
# with the repo's current Rust 1.75 toolchain.
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
# Editor syntax highlighting (pure-Rust regex; bundled syntaxes + themes).
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
# For per-pixel translucency (UpdateLayeredWindow) on a borderless window.
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
# GPU presentation: Direct3D11 + Direct2D/DirectWrite drawing into a
# premultiplied-alpha DirectComposition swapchain (true see-through, color emoji).
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Gdi",
    "Foundation_Numerics",
] }

[[bin]]
name = "wslterm"
path = "src/main.rs"
